[build-systems]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "protorecon"
version = "0.2.0"
description = "A passive OSINT CLI framework"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "typer",
    "rich",
    "python-whois",
    "sherlock-project",

]

[project.scripts]
protorecon = "protorecon.cli:app"
